k8s/apps/uptime-kuma/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: dev-environment
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
